markdown, barshc, image viewer, calendar

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ Xlib
 PyQt5
 jinja2
 pillow
+easydev
 moviepy
 pymupdf
+colormap
+markdown
 requests
 untangle
+ansicolors
 python-vlc
 py-wallpaper
 PyQtWebEngine
