changes in fileviewer and txt editor TBA

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 Xlib
 PyQt5
+spacy
 jinja2
 pillow
 easydev
 moviepy
 pymupdf
+pyttsx3
 colormap
 markdown
 requests
 untangle
+extcolors
+omegaconf
+scholarly
 ansicolors
 python-vlc
 py-wallpaper
