getting rid of security bug

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ FigUI/assets/history/
 FigUI/handler/Image/static/editor_rendered.html
 FigUI/handler/Image/static/viewer_rendered.html
 FigUI/handler/Image/static/color_histograms.json
+# rendered files
+FigUI/handler/Code/static/code_rendered.html
