--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 Xlib
 parse
 PyQt5
+scipy
 spacy
 jinja2
 pillow
 psutil
 easydev
+imageio
 moviepy
 pymupdf
 pyttsx3
@@ -18,6 +20,7 @@ omegaconf
 scholarly
 ansicolors
 imap_tools
+matplotlib
 python-vlc
 py-wallpaper
 PyQtWebEngine
