changing file viewer

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ FigUI/handler/Code/static/code_rendered.html
 FigUI/subSystem/Clock/static/code_rendered.html
 FigUI/handler/Code/html/static/html_editor_rendered.html
 FigUI/handler/Code/html/static/rendered-content.html
+FigUI/subSystem/TaskViewer/static/view_rendered.html
