get rid of rendered terminal html

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ FigUI/subSystem/Clock/static/code_rendered.html
 FigUI/handler/Code/html/static/html_editor_rendered.html
 FigUI/handler/Code/html/static/rendered-content.html
 FigUI/subSystem/TaskViewer/static/view_rendered.html
+FigUI/FigTerminal/static/terminal_rendered.html
