smart blurbackground feature

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ matplotlib
 python-vlc
 py-wallpaper
 PyQtWebEngine
+vaderSentiment
 charset-normalizer
 # preview-generator
 # screen-brightness-control
